--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(JobBot)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(JobBot main.cpp JsonParse.h VK.h Telegram.h WebServer.h)
+add_executable(JobBot main.cpp JsonParse.h VK.h Telegram.h WebServer.h DB.h)
 target_link_libraries(JobBot curl)
