--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ set(Boost_USE_STATIC_LIBS ON)
 set(Boost_USE_STATIC_RUNTIME ON)
 find_package (Boost REQUIRED system thread)
 
-include_directories(${Boost_INCLUDE_DIR})
-link_directories(${Boost_LIBRARY_DIR})
-target_link_libraries(JobBot ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} curl)
+include_directories(${Boost_INCLUDE_DIR} /usr/include/cppconn)
+link_directories(${Boost_LIBRARY_DIR} /usr/lib)
+target_link_libraries(JobBot mysqlcppconn ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} curl)
